--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-color: #ffffff;
+    margin: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.headingWrapper {
+    color: #ffffff;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    background-image: url("retro.png");
+    height: 5rem;
+    padding: 2rem;
+}
+
+h1 {
+    font-weight: bolder;
+    font-size: 4rem;
+    letter-spacing: 0.5rem;
+    margin-top: 0;
+    font-family: 'Ranchers', cursive;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: black;
+}
+
+ul {
+    background-color: rgba(177, 250, 253, 0.42);
+    font-family: 'Fredoka One', cursive;
+
+}
+
+.inputArea {
+    background-color: lightgoldenrodyellow;
+}
+
+input {
+    font-family: 'Fredoka One', cursive;
+
 }
