--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
 body {
-    background-color: #ffffff;
+    background-color: #ffdefd;
     margin: 0;
 }
 
 .headingWrapper {
-    color: #ffffff;
     display: grid;
     justify-content: center;
     align-content: center;
@@ -14,6 +13,7 @@ body {
 }
 
 h1 {
+    color: white;
     font-weight: bolder;
     font-size: 4rem;
     letter-spacing: 0.5rem;
@@ -56,4 +56,41 @@ ol {
     padding: 0.5rem;
     border-radius: 16px;
     background-color: #e38ce2;
+}
+.submit:active{
+    background-color: #871c86;
+    color: #ffb37d;
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: black;
+}
+
+@media only screen and (max-width: 550px) {
+    h1 {
+        font-size: 2.5rem;
+    }
+}
+@media only screen and (max-width: 380px) {
+    h1 {
+        font-size: 2rem;
+    }
+    .contentWrapper {
+        padding: 0.5rem;
+        margin: 0.5rem;
+        margin-top: 2rem;
+    }
+    ol {
+        font-size: 1rem;
+        letter-spacing: 0.1rem;
+    }
+    .newTodo {
+        margin: 0.5rem;
+        width: 5rem;
+        padding: 0.2rem;
+        font-size: 0.6rem;
+    }
+
+    .submit {
+        padding: 0.2rem;
+        font-size: 0.8rem;
+    }
 }
