--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
     background-image: url("retro.png");
     height: 5rem;
     padding: 2rem;
+    margin-top: 1rem;
 }
 
 h1 {
@@ -17,7 +18,6 @@ h1 {
     font-weight: bolder;
     font-size: 4rem;
     letter-spacing: 0.5rem;
-    margin-top: 0;
     font-family: 'Ranchers', cursive;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
@@ -56,6 +56,7 @@ ol {
     padding: 0.5rem;
     border-radius: 16px;
     background-color: #e38ce2;
+    margin-top: 1rem;
 }
 .submit:active{
     background-color: #871c86;
@@ -92,5 +93,6 @@ ol {
     .submit {
         padding: 0.2rem;
         font-size: 0.8rem;
+        margin-top: 0.5rem;
     }
 }
